--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 <body>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/engine.js"></script>
+    <script src="js/engine.js">
+    	init();
+    	render();
+    </script>
 </body>
 </html>
+
+
